--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">TodoItems</string>
+    <string name="insert_description_here">Insert description here</string>
 </resources>
